# NEVO

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CMakeLists.txt  CODE_WIKI.md  Dockerfile  LICENSE  PLAN-per-client-key.md  README.md  README_zh.md  SECURITY_AUDIT_REPORT.md  TECHNICAL_DIAGNOSIS_REPORT.md  build_server.bat  check_server.py  deploy.sh  docker-compose.dev.yml  docker-compose.pull.yml  docker-compose.yml  docker-entrypoint.sh  index.html  install.sh  nevo_server.db-shm  nevo_server.db-wal  pull.sh  push.sh  server_config.example.json  test_coverage_report.md  test_debug.py
.github/workflows/: build.yml  docker-publish.yml
.wrangler/cache/: wrangler-account.json
cmake/: CompilerWarnings.cmake  FindOpus.cmake  FindRNNoise.cmake  PlatformSetup.cmake
docs/: chat-enhancement-design.md  nevo-project-documentation.html  screen-sharing-design.md  screen-sharing-plan.md
installer/: nevo_setup.nsi
mobile/android/: .gitignore  AndroidManifest.xml  CMakeLists.txt  gradle.properties  gradlew.bat  settings.gradle.kts
mobile/android/native/: CMakeLists.txt  jni_audio.cpp  jni_bridge.cpp  jni_crypto.cpp
mobile/ios/: Info.plist  (+2 more)
proto/: common.proto  control.proto  video.proto  voice.proto
scripts/: sync_proto_enums.py
src/: CMakeLists.txt  voice_relay_sim.cpp
src/client/: CMakeLists.txt  console_main.cpp
src/client/gui_python/: audio_manager.py  audio_share_engine.py  avatar_manager.py  debug_userlist.py  i18n.py  join_sound.py  main.py  main_window.py  nevo_client.py  nevo_client.spec  nevo_client_mac.spec  nevo_wire.py  per_user_volume.py  screen_audio_capture.py  screen_capture.py  screen_share_dialog.py  theme_manager.py  updater.py  video_encoder.py  video_engine.py  voice_crypto.py  voice_engine.py
src/client/gui_python/proto/: common_pb2.py  common_pb2.pyi  control_pb2.py  control_pb2.pyi  video_pb2.py  voice_pb2.py  voice_pb2.pyi
src/client/gui_python/scripts/: build_mac.sh  package_dmg.sh
src/client/gui_python/translations/: en.json  zh_CN.json  zh_TW.json
src/client/gui_python/views/: channel_tree.py  chat_input_bar.py  chat_widget.py  connection_bar.py  emoji_panel.py  file_upload_dialog.py  screen_share_view.py  server_quick_access.py  server_status.py  settings_page.py  update_dialog.py  user_list.py  voice_waveform.py
src/client/include/nevo/client/: AudioInput.h  AudioOutput.h  ClientCore.h  NetworkManager.h
src/client/src/: AudioInput.cpp  AudioOutput.cpp  ClientCore.cpp  NetworkManager.cpp
src/core/: CMakeLists.txt
src/core/include/nevo/core/audio/: AudioEngine.h  AudioMemoryPool.h  AudioMixer.h  JitterBuffer.h  OpusDecoder.h  OpusEncoder.h  Resampler.h  VoiceActivity.h
src/core/include/nevo/core/common/: Logger.h  Result.h  Types.h
src/core/include/nevo/core/model/: Channel.h  Permission.h  User.h
src/core/include/nevo/core/protocol/: PacketCodec.h  PacketTypes.h
src/core/include/spdlog/: async.h  spdlog.h
src/core/include/spdlog/sinks/: basic_file_sink.h
src/core/src/audio/: AudioEngine.cpp  AudioMemoryPool.cpp  AudioMixer.cpp  JitterBuffer.cpp  OpusDecoder.cpp  OpusEncoder.cpp  Resampler.cpp  VoiceActivity.cpp
src/core/src/common/: Logger.cpp
src/core/src/model/: Channel.cpp  Permission.cpp  User.cpp
src/core/src/protocol/: PacketCodec.cpp
src/network/: CMakeLists.txt
src/network/include/nevo/network/: ConnectionManager.h  NatTraversal.h  PacketRouter.h  SslWrapper.h  TcpConnection.h  TcpVoiceTunnel.h  UdpSocket.h  VoiceCrypto.h
src/network/src/: ConnectionManager.cpp  NatTraversal.cpp  PacketRouter.cpp  SslWrapper.cpp  TcpConnection.cpp  TcpVoiceTunnel.cpp  UdpSocket.cpp  VoiceCrypto.cpp
src/server/: CMakeLists.txt
src/server/gui_python/: main.py  main_window.py  nevo_server_manager.spec  server_process.py
src/server/gui_python/views/: channels.py  config.py  dashboard.py  log_view.py  sessions.py
src/server/include/nevo/server/: AudioRelay.h  ChannelManager.h  ClientSession.h  ControlServer.h  Database.h  ServerConfig.h  ServerCore.h  VideoRelay.h
src/server/src/: AudioRelay.cpp  ChannelManager.cpp  ClientSession.cpp  ControlServer.cpp  Database.cpp  ServerConfig.cpp  ServerCore.cpp  VideoRelay.cpp  main.cpp
src/server/ui/include/nevo/server/ui/: ChannelPanel.h  ServerConfigPanel.h  ServerLogView.h  ServerMainWindow.h  ServerStatusBar.h  SessionTableModel.h
src/server/ui/src/: ChannelPanel.cpp  ServerConfigPanel.cpp  ServerLogView.cpp  ServerMainWindow.cpp  ServerStatusBar.cpp  SessionTableModel.cpp  server_gui_main.cpp
src/server/ui/translations/: nevo_server_en.ts  nevo_server_zh_CN.ts  nevo_server_zh_TW.ts
src/ui/: CMakeLists.txt
src/ui/include/nevo/ui/: AudioSettingsWidget.h  ChannelItemDelegate.h  ChannelTreeModel.h  ChatWidget.h  ConnectionBar.h  IconProvider.h  LoginDialog.h  MainWindow.h  ThemeManager.h  UserListModel.h
src/ui/resources/themes/: dark_theme.qss  light.qss  server_dark_theme.qss
src/ui/src/: AudioSettingsWidget.cpp  ChannelItemDelegate.cpp  ChannelTreeModel.cpp  ChatWidget.cpp  ConnectionBar.cpp  IconProvider.cpp  LoginDialog.cpp  MainWindow.cpp  ThemeManager.cpp  UserListModel.cpp  main.cpp
src/ui/translations/: nevo_client_en.ts  nevo_client_zh_CN.ts  nevo_client_zh_TW.ts
tests/: CMakeLists.txt
tests/audio_tests/: TestAudioMemoryPool.cpp  TestAudioMixer.cpp  TestAudioMixerAdvanced.cpp  TestJitterBuffer.cpp  TestJitterBufferMultiUser.cpp  TestJitterBufferThreadSafety.cpp  TestOpusCodec.cpp  TestResampler.cpp  TestVoiceActivity.cpp
tests/core_tests/: TestChannel.cpp  TestChannelAdvanced.cpp  TestPacketCodec.cpp  TestPermission.cpp  TestPermissionEdgeCases.cpp  TestResult.cpp  TestResultEdgeCases.cpp  TestUser.cpp
tests/network_tests/: TestNatTraversal.cpp  TestNatTraversalAuth.cpp  TestNatTraversalCodec.cpp  TestTcpConnection.cpp  TestTcpConnectionTimeout.cpp  TestTcpPayloadValidation.cpp  TestVoiceCrypto.cpp
tests/server_tests/: TestServerArgParsing.cpp  TestServerIntegration.cpp  TestVoiceRelayIntegration.cpp
tools/: test_gap_analyzer_v2.py
web/: index.html  server.py  start_web.bat
website/: index.html
(+155 files in other folders)
